Размечает третий шаг формы

--- a/source/form.html
+++ b/source/form.html
@@ -586,11 +586,25 @@
                 <legend class="visually-hidden">Описание развлечений</legend>
 
                 <ul class="form__list descriptions">
-                  <li class="form__item"></li>
+                  <li class="form__item descriptions__item">
+                    <h4 class="descriptions__country descriptions__country--bosnia">Босния и Герцеговина</h4>
+                    <label class="form__label">
+                      <textarea class="descriptions__textarea" name="entertainment-description-1" placeholder="План действий"
+                        aria-label="Ваш план действий в этой стране"></textarea>
+                    </label>
+                  </li>
+
+                  <li class="form__item descriptions__item">
+                    <h4 class="descriptions__country descriptions__country--czech">Чехия</h4>
+                    <label class="form__label">
+                      <textarea class="descriptions__textarea" name="entertainment-description-1" placeholder="План действий"
+                        aria-label="Ваш план действий в этой стране">Пить пиво и лазить по старым замкам, наслаждаться архитектурой и вот это все.</textarea>
+                    </label>
+                  </li>
                 </ul>
               </fieldset>
 
-              <button class="form__button button" type="submit">Следующий шаг</button>
+              <button class="form__button button" type="submit">Отправить</button>
               <a class="form__back-link" href="#">На шаг назад</a>
             </form>
           </li>
