Дорабатывает блок профиля

--- a/source/form.html
+++ b/source/form.html
@@ -131,7 +131,7 @@
 
         <img class="user-profile__avatar" src="img/avatars/petya-demin.jpg" width="100" height="100"
           alt="Ваш аватар: бородатый мужчина в шапке и темных очках на фоне снега">
-        <a class="user-profile__change-avatar button button--blue" href="blank.html"><span class="button__additional-text">Сменить</span> фото</a>
+        <a class="user-profile__change-avatar button button--blue" href="blank.html"><span class="button__additional-text">Сменить </span>фото</a>
 
         <div class="user-profile__tags info">
           <h3 class="visually-hidden">Информация о вас</h3>
@@ -175,6 +175,8 @@
                 </li>
               </ul>
             </fieldset>
+
+            <button class="form__button form__button--hidden button button--blue" type="submit">Обновить профиль</button>
           </form>
         </div>
       </section>
