Добавляет заезд и выезд в календарь

--- a/source/form.html
+++ b/source/form.html
@@ -301,9 +301,9 @@
                     <span class="calendar__day calendar__day--grey" tabindex="0">23</span>
                     <span class="calendar__day calendar__day--grey" tabindex="0">24</span>
                     <span class="calendar__day calendar__day--grey" tabindex="0">25</span>
-                    <span class="calendar__day calendar__day--first" tabindex="0">26</span>
+                    <span class="calendar__day calendar__day--first" tabindex="0">26 <span class="calendar__text">Заезд</span></span>
                     <span class="calendar__day calendar__day--picked" tabindex="0">27</span>
-                    <span class="calendar__day calendar__day--last" tabindex="0">28</span>
+                    <span class="calendar__day calendar__day--last" tabindex="0">28 <span class="calendar__text">Выезд</span></span>
                     <span class="calendar__day" tabindex="0">29</span>
                     <span class="calendar__day" tabindex="0">30</span>
                     <span class="calendar__day" tabindex="0">31</span>
